# openedx-course-structure

./: README.md  pyproject.toml
src/openedx_course_structure/: __main__.py  course_structure.py
